# rust-mygram

./: .env.example  Cargo.toml  README.md
migrations/: 20250118203040_comments_table.up.sql  20250118203205_socialmedia_table.down.sql  20250118203205_socialmedia_table.up.sql  20250118203216_users_table.up.sql  20250118203231_photos_table.up.sql
src/: main.rs
src/models/: comment_model.rs  mod.rs  photo_model.rs  socialmedia_model.rs  user_model.rs
src/repositories/: comment_repository.rs  user_repository.rs
src/schema/: comment_schema.rs  general_schema.rs  mod.rs  photo_schema.rs  socialmedia_schema.rs  user_schema.rs
src/services/: user_service.rs
